# pk4-markitdown

./: .gitmodules  README.md
Projekt/: .gitignore
Projekt/markitdown/: main.cpp  markitdown.pro  qml.qrc
Projekt/markitdown/lib/include/: markdowndocument.h  markdownparser.h
Projekt/markitdown/lib/include/markdown-document/markdown-elements/: blockquoteelement.h  headerelement.h  imageelement.h  inlinecodeelement.h  multilinetextelement.h  textlineelement.h
Projekt/markitdown/lib/include/markdown-elements/: blockquoteelement.h  codeblockelement.h  linkableelement.h  linkelement.h  listelement.h  orderedlistelement.h  plaintextelement.h  strikethroughelement.h  unorderedlistelement.h  vinlinemarkdownelement.h
Projekt/markitdown/lib/include/obsolete/: markdownheaderlevel.enum.h  markdownparser.h
Projekt/markitdown/lib/include/obsolete/markdown-document/markdown-elements/: headerelement.h  horizontalruleelement.h  multilinetextelement.h  recursivevarianttype.h
Projekt/markitdown/lib/src/markdown-parser/: CMakeLists.txt  linkablereference.h  markdownheaderlevel.enum.h  markdowninlineelementsparser.cpp  markdowninlineelementsparser.h  markdownparser.cpp  markdownparser.h  markdowntokenizer.cpp  markdowntokenizer.h  nthelement.cpp  nthelement.h  nthelement.hpp  regex.defs.h
Projekt/markitdown/lib/src/markdown-parser/helpers/: trim.cpp  trim.h
Projekt/markitdown/lib/src/markdown-parser/markdown-document/: markdowndocument.cpp  markdowndocument.h
Projekt/markitdown/lib/src/markdown-parser/markdown-document/markdown-elements/: blockquoteelement.cpp  blockquoteelement.h  codeblockelement.cpp  codeblockelement.h  emphasiselement.cpp  emphasiselement.h  headerelement.cpp  headerelement.h  horizontalruleelement.cpp  imageelement.cpp  inlinecodeelement.cpp  linkableelement.cpp  linkableelement.h  linkelement.cpp  listelement.cpp  listelement.h  multilinetextelement.cpp  multilinetextelement.h  nestedelement.cpp  nestedelement.h  orderedlistelement.cpp  orderedlistelement.h  paragraphelement.cpp  paragraphelement.h  plaintextelement.cpp  plaintextelement.h  strikethroughelement.cpp  strikethroughelement.h  strongemphasiselement.cpp  strongemphasiselement.h  textlineelement.cpp  textlineelement.h  unorderedlistelement.cpp  unorderedlistelement.h  vinlinemarkdownelement.h  vtoplevelmarkdownelement.h
Projekt/markitdown/lib/src/markdown-parser/markdown-tokens/: blockquotetoken.cpp  blockquotetoken.h  codetoken.cpp  codetoken.h  emptytoken.cpp  emptytoken.h  endofdocument.cpp  endofdocument.h  headertoken.cpp  headertoken.h  headerunderlinetoken.cpp  headerunderlinetoken.h  horizontalruletoken.cpp  horizontalruletoken.h  orderedlisttoken.cpp  orderedlisttoken.h  plaintexttoken.cpp  plaintexttoken.h  rawtexthandler.cpp  rawtexthandler.h  unorderedlisttoken.cpp  unorderedlisttoken.h
Projekt/markitdown/lib/src/markdown-parser/tests/: CMakeLists.txt
Projekt/markitdown/lib/src/markdown-parser/tests/src/: markdownparser.cpp  markdowntokenizer.cpp
Projekt/markitdown/lib/src/markdown-parser/tests/src/markdown-document/: markdowndocument.cpp
Projekt/markitdown/lib/src/markdown-parser/tests/src/markdown-document/markdown-elements/: codeblockelement.cpp  headerelement.cpp  linkableelements.cpp  linkelement.cpp  listelements.cpp  multilinetextelement.cpp  nestableelements.cpp  plaintextelement.cpp  textlineelement.cpp
Projekt/markitdown/lib/src/markdown-parser/tests/src/markdown-tokens/: codetoken.cpp  headertoken.cpp  headerunderlinetoken.cpp  plaintexttoken.cpp  unorderedlisttoken.cpp
Projekt/markitdown/qml/: Constants.qml  FileHandler.qml  main.qml
Projekt/markitdown/qml/components/: CheatsheetComparison.qml  ClosableTabButton.qml  CustomScrollBar.qml  CustomToolTip.qml  DialogButton.qml  HeaderLevelSelector.qml  HoverableMouseArea.qml  IconButton.qml  IconLink.qml  ImageTabButton.qml  InputBox.qml  MarkdownToolBar.qml  ResizeHandler.qml  ScrollableTabBar.qml  WindowButton.qml  WindowTabBar.qml
Projekt/markitdown/qml/views/: AboutScreen.qml  EditorScreen.qml  HomeScreen.qml  LinkableElementScreen.qml  MarkdownCheatsheet.qml  SettingsScreen.qml
Projekt/markitdown/src/: backendconnection.cpp  backendconnection.h  configfilemanager.cpp  configfilemanager.h  configmanager.cpp  configmanager.h  filemanager.cpp  filemanager.h  markdownfilemanager.cpp  markdownfilemanager.h  tab.cpp  tab.h  tabmanager.cpp  tabmanager.h
Projekt/markitdown/src/converters/: htmlconverter.cpp  htmlconverter.h  iconverter.cpp  iconverter.h
